# StimulusModeling

./: .gitignore  README.md  __init__.py  install.py  pyproject.toml  requirements.txt  setup.py  stim_transformations.py  stim_transformations_tutorial.ipynb
examples/: batch_processing.py
tutorial/: stim_transformations_tutorial.ipynb
